<resources>
    <string name="app_name">StuffTracker</string>
    <string name="addresses">CÍMEK</string>
    <string name="categories">KATEGÓRIÁK</string>
    <string name="pin">PIN:</string>
    <string name="login">BEJELENTKEZÉS</string>
    <string name="register">REGISZTRÁCIÓ</string>
    <string name="name">NÉV</string>
    <string name="address">CÍM</string>
    <string name="stuff_data">Dolog Jelenlegi Adatai</string>
    <string name="oldpin">Régi PIN:</string>
    <string name="newpin">Új PIN:</string>
    <string name="cancel">MÉGSE</string>
    <string name="save">MENTÉS</string>
    <string name="category">KATEGÓRIA:</string>
    <string name="zip">Irányítószám:</string>
    <string name="city">Város:</string>
    <string name="country">Ország:</string>
    <string name="street">Közterület:</string>
    <string name="streetNum">Házszám:</string>
    <string name="alias">Becenév:</string>
    <string name="quantity">Mennyiség:</string>
    <string name="desc">Megjegyzés:</string>
    <string name="quantityPlaceholder">DB</string>
    <string name="manage_addresses_menuitem">Címek szerkesztése</string>
    <string name="manage_categories_menuitem">Kategóriák szerkesztése</string>
    <string name="change_pin_menuitem">PIN megváltoztatása</string>
    <string name="reminder">Emlékeztető:</string>
    <string name="reminderDialogTitle">PIN Emlékeztető</string>
    <string name="no_address_stored">Nincsen cím rögzítve...</string>
    <string name="permission_extstorage_rationale">A képek mentéséhez szükségem van a fájlok kezelésével kapcsolatos engedélyhez! Megkaphatom?</string>
    <string name="camera">KAMERA</string>
    <string name="gallery">GALÉRIA</string>
    <string name="uploadPictureDialogMessage">Kérlek válassz módot a kép hozzáadásához!</string>
</resources>