<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/zipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip"
        app:layout_constraintTop_toTopOf="@id/zipEt"
        app:layout_constraintBottom_toBottomOf="@id/zipEt"
        app:layout_constraintEnd_toStartOf="@id/zipEt"/>

    <TextView
        android:id="@+id/cityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        app:layout_constraintTop_toTopOf="@id/cityEt"
        app:layout_constraintBottom_toBottomOf="@id/cityEt"
        app:layout_constraintEnd_toStartOf="@id/cityEt"/>

    <TextView
        android:id="@+id/countryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintTop_toTopOf="@id/countryEt"
        app:layout_constraintBottom_toBottomOf="@id/countryEt"
        app:layout_constraintEnd_toStartOf="@id/countryEt"/>

    <TextView
        android:id="@+id/streetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street"
        app:layout_constraintTop_toTopOf="@id/streetEt"
        app:layout_constraintBottom_toBottomOf="@id/streetEt"
        app:layout_constraintEnd_toStartOf="@id/streetEt"/>

    <TextView
        android:id="@+id/streetNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streetNum"
        app:layout_constraintTop_toTopOf="@id/streetNumEt"
        app:layout_constraintBottom_toBottomOf="@id/streetNumEt"
        app:layout_constraintEnd_toStartOf="@id/streetNumEt"/>

    <TextView
        android:id="@+id/aliasLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alias"
        app:layout_constraintTop_toTopOf="@id/aliasEt"
        app:layout_constraintBottom_toBottomOf="@id/aliasEt"
        app:layout_constraintEnd_toStartOf="@id/aliasEt"/>

    <EditText
        android:id="@+id/zipEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/cityEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/zipEt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/countryEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/cityEt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/streetEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/countryEt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/streetNumEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/streetEt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/aliasEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/streetNumEt"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>