<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="@id/nameEt"
        app:layout_constraintBottom_toBottomOf="@id/nameEt"
        app:layout_constraintEnd_toStartOf="@id/nameEt"/>

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        app:layout_constraintTop_toTopOf="@id/quantityEt"
        app:layout_constraintBottom_toBottomOf="@id/quantityEt"
        app:layout_constraintEnd_toStartOf="@id/quantityEt"/>

    <TextView
        android:id="@+id/descLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        app:layout_constraintTop_toTopOf="@id/descEt"
        app:layout_constraintBottom_toBottomOf="@id/descEt"
        app:layout_constraintEnd_toStartOf="@id/descEt"/>

    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintTop_toBottomOf="@id/catSpinner"
        app:layout_constraintEnd_toEndOf="@+id/descLabel"
        app:layout_constraintTop_toTopOf="@id/catSpinner" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/quantityEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/nameEt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/descEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/quantityEt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/catSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/categoryLabel"
        app:layout_constraintTop_toBottomOf="@id/descEt" />

</androidx.constraintlayout.widget.ConstraintLayout>